fix: support binary paste and markdown copy/export